Samples/Errors/LetIn2.gs
//This is a G# program with errors.

//Empty expression after `in` keyword
print let
            b = 4;
      in ;